# web-llm-project-template-v1

./: .env.example  .gitignore  CLAUDE.md  PROMPT.example  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 812c694f90d2_add_tasks_table.py  d7e18ca6c5b2_initial.py
backend/app/: main.py
backend/app/api/v1/: auth.py  chat.py  deps.py  events.py  router.py  tasks.py  users.py
backend/app/core/: config.py  database.py  email.py  firestore.py  gemini.py  google_oauth.py  redis.py  storage.py
backend/app/models/: schemas.py  task.py  user.py
backend/app/services/: auth_service.py  event_manager.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: auth.ts  chat.ts  client.ts  tasks.ts
frontend/src/components/auth/: LoginPage.tsx  RegisterPage.tsx
frontend/src/components/chat/: ChatComponent.tsx
frontend/src/components/dashboard/: DashboardShell.tsx
frontend/src/hooks/: useChat.ts  useSSE.ts
frontend/src/pages/: Dashboard.tsx  Tasks.tsx
frontend/src/services/: authContext.tsx  sseContext.tsx
frontend/src/types/: index.ts
tests/e2e/: package-lock.json  package.json  playwright.config.ts
tests/e2e/tests/: auth.spec.ts  example.spec.ts
